--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  gap: 20px;
   max-width: 400px;
   margin: 0 auto;
-  height: 70vh;
+  height: 100vh;
 }
 
 .calculator__container {
@@ -138,4 +140,20 @@
 
 .orange:hover {
   background-color: #e0720a;
+}
+
+.calculator__loading {
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.calculator__quotes__title {
+  text-align: center;
+  font-size: 18px;
+}
+
+.calculator__quotes__category,
+.calculator__quotes__quote {
+  font-size: 15px;
 }
